1 - remove unused code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "isolatedModules": true,
     "sourceMap": true,
     "jsx": "react-jsx",
+    "noEmitOnError": false,
     "baseUrl": ".",
     "paths": {
       "*": [
