--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.18.0",
+    "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.1.1",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
