--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-select": "^5.7.4",
+    "react-select-virtualized": "^5.5.0",
     "react-swipeable": "^7.0.1",
     "react-toastify": "^9.1.1",
     "react-transition-group": "^4.4.5",
+    "react-virtualized": "^9.22.5",
     "uuid": "^9.0.0",
     "web-vitals": "^3.1.1"
   },
