--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "start": "webpack serve --https --env port=3000",
-    "start:server": "node server",
+    "start:server": "json-server --watch ./json-server/car.json --port 3001",
     "build:prod": "webpack --env mode=production",
     "build:prod:analyzer": "webpack --env mode=production analyzer=enabled",
     "build:dev": "webpack --env mode=development",
