--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@reduxjs/toolkit": "^1.9.1",
+    "@vercel/analytics": "^1.0.2",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
