--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "events": "^3.3.0",
     "express": "^4.18.2",
     "express-static-gzip": "^2.1.7",
+    "firebase": "^10.3.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
