--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "express": "^4.18.2",
     "express-static-gzip": "^2.1.7",
     "firebase": "^10.3.0",
+    "lottie-react": "^2.4.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.18.0",
-    "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.1.1",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
