--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "react/prop-types": "off",
+    "jsx-a11y/media-has-caption": "off",
     "camelcase": "error",
     "quotes": [
       "error",
