--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-loading-skeleton": "^3.1.1",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.10.0",
     "react-select": "^5.7.4",
     "react-select-virtualized": "^5.5.0",
