--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@storybook/addon-interactions": "^7.4.2",
     "@storybook/addon-links": "^7.4.2",
     "@storybook/addon-mdx-gfm": "^7.4.2",
+    "@storybook/addon-styling-webpack": "^0.0.4",
     "@storybook/react": "^7.4.2",
     "@storybook/react-webpack5": "^7.4.2",
     "@storybook/testing-library": "^0.2.1",
@@ -163,7 +164,7 @@
     "storybook": "^7.4.2",
     "storybook-addon-pseudo-states": "2.1.1",
     "storybook-addon-react-router-v6": "^2.0.7",
-    "style-loader": "^3.3.1",
+    "style-loader": "^3.3.3",
     "stylelint": "^15.1.0",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-standard-scss": "^6.1.0",
