--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "webpack": "^5.78.0",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.1",
+    "webpack-plugin-replace": "^1.2.0",
     "workbox-webpack-plugin": "^7.0.0"
   }
 }
