--- a/package.json
+++ b/package.json
@@ -75,11 +75,10 @@
   "loki": {
     "diffingEngine": "pixelmatch",
     "configurations": {
-      "chrome.laptop": {
+      "chrome.iphone7": {
         "target": "chrome.docker",
-        "width": 1366,
-        "height": 768,
-        "mobile": false
+        "preset": "iPhone 7",
+        "mobile": true
       }
     },
     "pixelmatch": {
