--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -27,6 +27,24 @@ jobs:
       - name: yarn install
         run: yarn install
 
+      - name: build storybook
+        run: yarn storybook:build
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: "./storybook-static"
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
+
+      - name: test ui
+        run: yarn test:ui:ci
+
       - name: yarn build:prod
         run: yarn build:prod
 
@@ -36,3 +54,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CAR_MASTER_A976D }}'
           channelId: live
           projectId: car-master-a976d
+
+
