--- a/package.json
+++ b/package.json
@@ -153,7 +153,7 @@
     "jest-environment-jsdom": "^29.4.3",
     "jest-html-reporters": "^3.1.4",
     "jest-mock-axios": "^4.7.0-beta4",
-    "loki": "^0.31.2",
+    "loki": "0.32.0",
     "mini-css-extract-plugin": "^2.7.2",
     "prettier": "^2.8.4",
     "react-refresh": "^0.14.0",
