--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -21,14 +21,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: install yarn
-        run: npm install -g yarn
-
-      - name: yarn install
-        run: yarn install
+      - name: npm i
+        run: npm ci
 
       - name: build storybook
-        run: yarn storybook:build
+        run: npm run storybook:build
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -43,10 +40,10 @@ jobs:
         uses: actions/deploy-pages@v2
 
       - name: test ui
-        run: yarn test:ui:ci
+        run: npm run test:ui:ci
 
-      - name: yarn build:prod
-        run: yarn build:prod
+      - name: npm build:prod
+        run: npm run build:prod
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
