--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -21,11 +21,14 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: npm ci
-        run: npm ci
+      - name: install yarn
+        run: npm install -g yarn
+
+      - name: yarn install
+        run: yarn install
 
       - name: build storybook
-        run: npm run storybook:build
+        run: yarn storybook:build
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -40,10 +43,10 @@ jobs:
         uses: actions/deploy-pages@v2
 
       - name: test ui
-        run: npm run test:ui:ci
+        run: yarn test:ui:ci
 
-      - name: npm build:prod
-        run: npm run build:prod
+      - name: yarn build:prod
+        run: yarn build:prod
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
