--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -41,7 +41,6 @@ jobs:
 
       - name: test ui
         run: yarn test:ui:ci
-        if: always()
 
       - name: Generate HTML report
         run: npm run test:ui:report
@@ -50,7 +49,7 @@ jobs:
         uses: actions/configure-pages@v3
 
       - name: Create pages Folder
-        run: mv storybook-static pages/storybook && mv .loki pages/loki
+        run: mv ./storybook-static pages/storybook && mv .loki pages/loki
         if: always()
 
       - name: Upload artifact
