--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -32,7 +32,7 @@ jobs:
         if: always()
 
       - name: yarn install
-        run: yarn install
+        run: yarn install --frozen-lockfile
         if: always()
 
       - name: build storybook
@@ -49,7 +49,7 @@ jobs:
         uses: actions/configure-pages@v3
 
       - name: Create pages Folder
-        run: mv ./storybook-static pages/storybook && mv .loki pages/loki
+        run: mkdir pages && mv ./storybook-static pages/storybook && mv .loki pages/loki
         if: always()
 
       - name: Upload artifact
