create prod and dev env

--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "deep-equal": "^2.2.0",
     "dotenv": "^16.0.3",
     "events": "^3.3.0",
-    "express": "^4.18.2",
-    "express-static-gzip": "^2.1.7",
     "firebase": "^10.3.0",
     "lottie-react": "^2.4.0",
     "postinstall-postinstall": "^2.1.0",
@@ -45,12 +43,14 @@
     "workbox-window": "^7.0.0"
   },
   "scripts": {
-    "start": "webpack serve --https --env port=3000",
-    "start:server": "json-server --watch ./json-server/car.json --port 3001",
-    "build:prod": "webpack --env mode=production",
-    "build:prod:analyzer": "webpack --env mode=production analyzer=enabled",
-    "build:dev": "webpack --env mode=development",
-    "build:dev:analyzer": "webpack --env mode=development analyzer=enabled",
+    "start": "ENV=dev webpack serve --https --env port=3000",
+    "start:prod": "ENV=prod webpack serve --https --env port=3000",
+    "build:dev": "ENV=dev webpack --env mode=production",
+    "build:dev:analyzer": "ENV=dev webpack --env mode=production analyzer=enabled",
+    "build:prod": "ENV=prod webpack --env mode=production",
+    "build:prod:analyzer": "ENV=prod webpack --env mode=production analyzer=enabled",
+    "deploy:prod": "firebase deploy -P prod",
+    "deploy:dev": "firebase deploy -P dev",
     "test:unit": "jest --config \"./config/jest/jest.config.ts\"",
     "test:ui": "npx loki test",
     "test:ui:ok": "npx loki approve",
@@ -128,7 +128,6 @@
     "babel-loader": "^9.1.2",
     "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
-    "cors": "^2.8.5",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.2.2",
     "dependency-cruiser": "^12.11.0",
