--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,9 @@
 {
   "projects": {
-    "default": "car-master-a976d"
-  }
+    "default": "car-master-a976d",
+    "prod": "car-master-prod",
+    "dev": "car-master-a976d"
+  },
+  "targets": {},
+  "etags": {}
 }
