--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,11 @@
 .DS_Store
 .env
 .env.local
-.env.development.local
+.env.dev
 .env.test.local
 .env.production.local
-
+.env.prod
+.env.dev
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
