--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -44,7 +44,7 @@ jobs:
         if: always()
 
       - name: Generate HTML report
-        run: npm run test:ui:report
+        run: npm run test:ui:report:ci
         if: always()
 
       - name: Setup Pages
