--- a/package.json
+++ b/package.json
@@ -49,13 +49,14 @@
     "build:dev:analyzer": "ENV=dev webpack --env mode=production analyzer=enabled",
     "build:prod": "ENV=prod webpack --env mode=production",
     "build:prod:analyzer": "ENV=prod webpack --env mode=production analyzer=enabled",
-    "deploy:prod": "firebase deploy -P prod",
-    "deploy:dev": "firebase deploy -P dev",
+    "deploy:prod": "yarn build:prod && firebase deploy -P prod",
+    "deploy:dev": "yarn build:dev && firebase deploy -P dev",
     "test:unit": "jest --config \"./config/jest/jest.config.ts\"",
     "test:ui": "npx loki test",
     "test:ui:ok": "npx loki approve",
     "test:ui:ci": "npx loki --requireReference --reactUri file:\"./storybook-static\"",
-    "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
+    "test:ui:report:ci": "npm run test:ui:json && npm run test:ui:html",
+    "test:ui:report": "yarn test:ui:report:ci && open \".loki/report.html\"",
     "test:ui:json": "node scripts/generate-visual-json-report.ts",
     "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "lint:ts": "eslint \"src/**/*.{js,jsx,ts,tsx,json}\"",
