--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,7 +18,8 @@ jobs:
     strategy:
       matrix:
         node-version: [ 16.x ]
-
+    env: # Or as an environment variable
+      FIREBASE_CONFIG: ${{ secrets.FIREBASE_CONFIG }}
     steps:
       - uses: actions/checkout@v3
 
