--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         node-version: [ 16.x ]
     with:
-      FIREBASE_CONFIG: ${{ secrets.FIREBASE_CONFIG }}
+      FIREBASE_CONFIG: '${{ secrets.FIREBASE_CONFIG }}'
     steps:
       - uses: actions/checkout@v3
 
